--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -4,7 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -66,10 +65,11 @@
 
     </LinearLayout>
 
-    <LinearLayout
+    <ImageView
         android:layout_width="match_parent"
-        android:layout_height="@dimen/_150sdp"
+        android:layout_height="@dimen/_160sdp"
         android:layout_alignParentBottom="true"
-        android:background="@drawable/bottom_background"></LinearLayout>
+        android:scaleType="fitXY"
+        android:src="@drawable/bottom_background"/>
 
 </RelativeLayout>
