--- a/app/src/main/res/drawable/strike_through.xml
+++ b/app/src/main/res/drawable/strike_through.xml
@@ -7,8 +7,8 @@
     </item>
     <item>
         <shape android:shape="line">
-            <stroke android:width="1dp"
-                android:color="#BD3E47"/>
+            <stroke android:width="1px"
+                android:color="#8f8f8f"/>
         </shape>
     </item>
 </layer-list>
