--- a/app/src/main/res/layout/category_list_item.xml
+++ b/app/src/main/res/layout/category_list_item.xml
@@ -17,19 +17,22 @@
             android:layout_height="wrap_content"
             android:background="@color/background_color"
             android:gravity="center"
-            android:padding="@dimen/_6sdp">
+            android:paddingTop="@dimen/_6sdp"
+            android:paddingRight="@dimen/_3sdp"
+            android:paddingLeft="@dimen/_3sdp"
+            android:paddingBottom="@dimen/_2sdp">
 
             <ImageView
                 android:id="@+id/categoryBackgroundImageView"
-                android:layout_width="@dimen/_35sdp"
-                android:layout_height="@dimen/_35sdp"
+                android:layout_width="@dimen/_38sdp"
+                android:layout_height="@dimen/_38sdp"
                 android:layout_centerInParent="true"
                 android:src="@drawable/circle_border" />
 
             <ImageView
                 android:id="@+id/categoryImageView"
-                android:layout_width="@dimen/_20sdp"
-                android:layout_height="@dimen/_20sdp"
+                android:layout_width="@dimen/_25sdp"
+                android:layout_height="@dimen/_25sdp"
                 android:layout_centerInParent="true" />
 
         </RelativeLayout>
