--- a/app/src/main/res/layout/home_list_item.xml
+++ b/app/src/main/res/layout/home_list_item.xml
@@ -20,14 +20,12 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/roboto_medium"
             android:gravity="center_vertical"
-            android:paddingLeft="@dimen/_6sdp"
-            android:paddingTop="@dimen/_8sdp"
+            android:paddingLeft="@dimen/_5sdp"
+            android:paddingTop="@dimen/_12sdp"
             android:paddingRight="@dimen/_6sdp"
-            android:paddingBottom="@dimen/_8sdp"
             android:text="Top Offers"
             android:textColor="@color/black"
-            android:textSize="@dimen/_13sdp"
-            android:textStyle="bold" />
+            android:textSize="@dimen/_13sdp" />
 
         <LinearLayout
             android:layout_width="match_parent"
