--- a/app/src/main/res/layout/order_list_item.xml
+++ b/app/src/main/res/layout/order_list_item.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/orderLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal"
     android:background="@color/background_color"
     android:gravity="center"
-    android:id="@+id/orderLayout"
     android:orientation="vertical">
 
     <LinearLayout
@@ -14,6 +14,8 @@
         android:layout_marginBottom="@dimen/_4sdp"
         android:background="@color/white"
         android:elevation="@dimen/_4sdp"
+        android:layout_marginLeft="@dimen/_6sdp"
+        android:layout_marginRight="@dimen/_6sdp"
         android:orientation="vertical"
         android:paddingTop="@dimen/_12sdp"
         android:paddingBottom="@dimen/_12sdp">
@@ -38,7 +40,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/roboto_medium"
-                    android:text="Order ID:"
+                    android:text="Order  #"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_11sdp" />
 
@@ -48,7 +50,6 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/roboto"
                     android:gravity="center_vertical"
-                    android:paddingLeft="@dimen/_10sdp"
                     android:text="189653"
                     android:textColor="#353434"
                     android:textSize="@dimen/_11sdp" />
@@ -67,7 +68,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/roboto_medium"
                     android:paddingLeft="@dimen/_15sdp"
-                    android:text="Total: "
+                    android:text="Total:  ₹"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_11sdp" />
 
@@ -76,8 +77,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/roboto"
-                    android:paddingLeft="@dimen/_15sdp"
-                    android:text="₹ 550"
+                    android:text="550"
                     android:textColor="#353434"
                     android:textSize="@dimen/_11sdp"
                     android:textStyle="bold" />
@@ -86,26 +86,35 @@
 
         </LinearLayout>
 
-        <TextView
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_4sdp"
-            android:fontFamily="@font/roboto_medium"
-            android:paddingLeft="@dimen/_15sdp"
-            android:text="Products:"
-            android:id="@+id/productsHeadingTextView"
-            android:textColor="@color/black"
-            android:textSize="@dimen/_11sdp" />
+            android:orientation="horizontal"
+            android:weightSum="1">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/productsRecyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/_15sdp"
-            android:layout_marginTop="@dimen/_3sdp"
-            android:layout_marginRight="@dimen/_15sdp">
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/productsRecyclerView"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/_15sdp"
+                android:layout_marginTop="@dimen/_3sdp"
+                android:layout_marginRight="@dimen/_15sdp"
+                android:layout_weight="0.9" />
 
-        </androidx.recyclerview.widget.RecyclerView>
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0.1"
+                android:gravity="center">
+
+                <ImageView
+                    android:layout_width="@dimen/_28sdp"
+                    android:layout_height="@dimen/_35sdp"
+                    android:id="@+id/arrowImageView"
+                    android:src="@drawable/chevron_right" />
+            </LinearLayout>
+
+        </LinearLayout>
 
     </LinearLayout>
 
