--- a/app/src/main/res/layout/order_products_item.xml
+++ b/app/src/main/res/layout/order_products_item.xml
@@ -8,11 +8,11 @@
 
     <LinearLayout
         android:id="@+id/itemLayout"
-        android:layout_width="@dimen/_200sdp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@color/white"
         android:orientation="horizontal"
-        android:paddingRight="@dimen/_4sdp">
+        android:padding="@dimen/_6sdp">
 
         <ImageView
             android:id="@+id/productImageView"
@@ -26,7 +26,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/_5sdp"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:visibility="gone">
 
             <TextView
                 android:id="@+id/productNameTextView"
