--- a/app/src/main/res/layout/order_products_list_item.xml
+++ b/app/src/main/res/layout/order_products_list_item.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/background_color">
 
@@ -10,8 +9,12 @@
         android:layout_height="wrap_content"
         android:background="@color/white"
         android:orientation="horizontal"
+        android:layout_marginBottom="@dimen/_3sdp"
         android:paddingTop="@dimen/_8sdp"
+        android:paddingLeft="@dimen/_6sdp"
+        android:paddingRight="@dimen/_6sdp"
         android:paddingBottom="@dimen/_8sdp"
+        android:elevation="@dimen/_1sdp"
         android:weightSum="1">
 
         <LinearLayout
