--- a/app/src/main/res/layout/cart_products_list_item.xml
+++ b/app/src/main/res/layout/cart_products_list_item.xml
@@ -120,7 +120,7 @@
 
                     <LinearLayout
                         android:layout_width="wrap_content"
-                        android:layout_height="@dimen/_23sdp"
+                        android:layout_height="@dimen/_25sdp"
                         android:layout_alignParentRight="true"
                         android:layout_marginRight="@dimen/_6sdp"
                         android:background="@drawable/item_border"
@@ -131,8 +131,10 @@
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:paddingLeft="@dimen/_10sdp"
+                            android:gravity="center"
                             android:paddingRight="@dimen/_10sdp"
                             android:text="-"
+                            android:paddingBottom="@dimen/_1sdp"
                             android:textColor="@color/black"
                             android:textSize="@dimen/_12sdp" />
 
@@ -148,6 +150,7 @@
                             android:paddingLeft="@dimen/_10sdp"
                             android:paddingRight="@dimen/_10sdp"
                             android:text="1"
+                            android:gravity="center"
                             android:textColor="@color/black"
                             android:textSize="@dimen/_13sdp" />
 
@@ -161,7 +164,9 @@
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:paddingLeft="@dimen/_10sdp"
+                            android:gravity="center"
                             android:paddingRight="@dimen/_10sdp"
+                            android:paddingBottom="@dimen/_1sdp"
                             android:text="+"
                             android:textColor="@color/black"
                             android:textSize="@dimen/_12sdp" />
