--- a/app/src/main/res/layout/fragment_offers.xml
+++ b/app/src/main/res/layout/fragment_offers.xml
@@ -11,7 +11,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/white"
+            android:gravity="center"
             android:orientation="vertical">
 
             <ImageView
@@ -27,7 +27,7 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/homeRecyclerView"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:nestedScrollingEnabled="false"></androidx.recyclerview.widget.RecyclerView>
 
