added my account changes and validations

--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -82,7 +82,7 @@
                             android:layout_marginTop="@dimen/_4sdp"
                             android:hint="First Name"
                             android:imeOptions="actionNext"
-                            android:inputType="textCapWords"
+                            android:inputType="textPersonName"
                             android:maxLength="40"
                             android:maxLines="1"
                             android:paddingLeft="@dimen/_8sdp"
@@ -110,7 +110,7 @@
                             android:layout_height="wrap_content"
                             android:hint="Last Name"
                             android:imeOptions="actionNext"
-                            android:inputType="textCapWords"
+                            android:inputType="textPersonName"
                             android:maxLength="40"
                             android:maxLines="1"
                             android:paddingLeft="@dimen/_8sdp"
@@ -212,6 +212,56 @@
                         app:fontFamily="@font/roboto" />
 
                 </com.google.android.material.textfield.TextInputLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:orientation="horizontal">
+
+                    <CheckBox
+                        android:id="@+id/privacyPolicyCheckbox"
+                        android:layout_width="@dimen/_20sdp"
+                        android:layout_height="@dimen/_20sdp"
+                        android:buttonTint="@color/green"
+                        android:checked="true" />
+
+                    <TextView
+                        android:id="@+id/privacyPolicyTextView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/_4sdp"
+                        android:text="@string/privacy_policy_link"
+                        android:textColor="@color/black"
+                        android:textSize="@dimen/_9sdp"
+                        android:textStyle="italic" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_3sdp"
+                    android:orientation="horizontal">
+
+                    <CheckBox
+                        android:id="@+id/termsConditionsCheckbox"
+                        android:layout_width="@dimen/_20sdp"
+                        android:layout_height="@dimen/_20sdp"
+                        android:buttonTint="@color/green"
+                        android:checked="true" />
+
+                    <TextView
+                        android:id="@+id/termsConditionsTextView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/_4sdp"
+                        android:text="@string/terms_conditions_link"
+                        android:textColor="@color/black"
+                        android:textSize="@dimen/_9sdp"
+                        android:textStyle="italic" />
+
+                </LinearLayout>
 
                 <TextView
                     android:id="@+id/registerTextView"
