--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -106,7 +106,7 @@
             android:paddingTop="@dimen/_5sdp"
             android:paddingRight="@dimen/_5sdp"
             android:paddingBottom="@dimen/_5sdp"
-            android:text="forgot password ? "
+            android:text="@string/forgot_password"
             android:textColor="@color/green"
             android:textSize="@dimen/_12sdp"
             android:textStyle="italic"
