--- a/app/src/main/res/layout/dialog_add_dialog.xml
+++ b/app/src/main/res/layout/dialog_add_dialog.xml
@@ -88,6 +88,7 @@
                     android:imeOptions="actionNext"
                     android:inputType="number"
                     android:maxLength="6"
+                    android:maxEms="6"
                     android:maxLines="1"
                     android:paddingLeft="@dimen/_8sdp"
                     android:textColor="@color/black"
@@ -164,6 +165,7 @@
                     android:maxEms="10"
                     android:maxLength="10"
                     android:maxLines="1"
+                    android:digits="0123456789"
                     android:paddingLeft="@dimen/_8sdp"
                     android:textColor="@color/black"
                     android:textColorHint="@color/black"
