--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -85,16 +85,16 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="center_vertical"
+            android:id="@+id/locationLayout"
             android:orientation="horizontal">
 
             <LinearLayout
-                android:id="@+id/locationLayout"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:clickable="true"
+                android:clickable="false"
                 android:gravity="center_vertical"
                 android:orientation="horizontal"
                 android:paddingRight="@dimen/_8sdp">
