--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -181,6 +181,8 @@
                         android:imeOptions="actionDone"
                         android:inputType="textPassword"
                         android:maxLines="1"
+                        android:maxEms="10"
+                        android:maxLength="10"
                         android:paddingLeft="@dimen/_8sdp"
                         android:password="true"
                         android:textColor="@color/black"
@@ -204,6 +206,8 @@
                         android:imeOptions="actionDone"
                         android:inputType="textPassword"
                         android:maxLines="1"
+                        android:maxEms="10"
+                        android:maxLength="10"
                         android:paddingLeft="@dimen/_8sdp"
                         android:password="true"
                         android:textColor="@color/black"
