--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -71,6 +71,8 @@
                 android:inputType="textPassword"
                 android:maxLines="1"
                 android:paddingLeft="@dimen/_8sdp"
+                android:maxEms="10"
+                android:maxLength="10"
                 android:password="true"
                 android:textColor="@color/black"
                 android:textColorHint="@color/black"
